Fix editor link spacing

--- a/src/styles/editor-link.css
+++ b/src/styles/editor-link.css
@@ -10,3 +10,7 @@
 .editor-link--closed {
   text-decoration: line-through;
 }
+
+.editor-link span + span:before {
+  content: ' ';
+}
